# l2fwd-sycl-uhd770

./: CMakeLists.txt  README.md
include/: common.h  cuda_related.h  headers.h  pipeline.h
src/: MainSourceFiles.yaml  kernel.dp.cpp  main.cpp.dp.cpp  pipeline.cpp.dp.cpp  utils.cpp
